--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,7 +8,7 @@ body {
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 120vh;
+  height: 100vh;
   padding: 100px;
 }
 
@@ -32,10 +32,12 @@ body {
 
 #Animales div div {
   transition: all 200ms;
+  overflow: hidden;
 }
 
 #Animales div >div:hover {
   box-shadow: 0px 1px 5px 1px;
+  overflow: hidden;
 }
 
 .participante {
